[FIXUP] Notification Tooltip is not responsive (https://github.com/FrontEnd-ro/frontend.ro/issues/394)

--- a/client/components/Header/Header.module.scss
+++ b/client/components/Header/Header.module.scss
@@ -176,3 +176,9 @@ header.header-menu-open .mobile-menu {
     transform: none;
   }
 }
+
+@media screen and (max-width: 500px) {
+  .notification-tooltip {
+    right: -10em !important;
+  }
+}
